--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "textAngular",
   "filename": "textAngular.min.js",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A radically powerful Text-Editor/Wysiwyg editor for Angular.js",
   "maintainers": [
     {
@@ -24,13 +24,18 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "grunt": "~0.4.2",
+    "grunt-bower-install": "~1.6.0",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-jshint": "^0.8.0",
     "grunt-contrib-uglify": "^0.2.7",
+	"grunt-contrib-copy": "^0.5.0",
+	  "grunt-contrib-connect": "~0.7.1",
+	  "grunt-contrib-watch": "~0.6.1",
     "grunt-istanbul-coverage": "~0.0.2",
     "grunt-karma": "^0.6.2",
     "grunt-karma-coveralls": "^2.5.0",
+    "load-grunt-tasks": "~0.4.0",
     "karma": "^0.10.10",
     "karma-chrome-launcher": "~0.1.2",
     "karma-coverage": "~0.2.0",
